--- a/html/forumpage1.html
+++ b/html/forumpage1.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=440px, heigth=855px initial-scale=1.0">
     <title>Forumpage</title>
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/navbarbot.css">
-    <link rel="stylesheet" href="/css/forum.css">
-    <link rel="stylesheet" href="/css/forum1.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/navbarbot.css">
+    <link rel="stylesheet" href="css/forum.css">
+    <link rel="stylesheet" href="css/forum1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
