--- a/html/health.html
+++ b/html/health.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=440px, heigth=855px, initial-scale=1.0">
     <title>Healthpage</title>
-      <link rel="stylesheet" href="css/home.css">
-      <link rel="stylesheet" href="css/navbarbot.css">
-      <link rel="stylesheet" href="css/health.css">
+      <link rel="stylesheet" href="../css/home.css">
+      <link rel="stylesheet" href="../css/navbarbot.css">
+      <link rel="stylesheet" href="../css/health.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
