--- a/html/faq.html
+++ b/html/faq.html
@@ -24,9 +24,9 @@
             </div>
         </div>
 
-        <img src="/Asset/1notif.png" alt="" class="notif2">
-        <img src="/Asset/15notif.png" alt="" class="notif3">
-        <img src="/Asset/line.png" alt="" class="line">
+        <img src="../Asset/1notif.png" alt="" class="notif2">
+        <img src="../Asset/15notif.png" alt="" class="notif3">
+        <img src="../Asset/line.png" alt="" class="line">
         <div class="forumchoice">
             <div class="latestfriend">
                 <a href="forumpage.html" class="latestt">
@@ -38,9 +38,9 @@
             </div>
         </div>
 
-        <img src="/Asset/faq1.png" alt="" class="example2">
-        <img src="/Asset/faq2.png" alt="" class="example2">
-        <img src="/Asset/faq3.png" alt="" class="example2">
+        <img src="../Asset/faq1.png" alt="" class="example2">
+        <img src="../Asset/faq2.png" alt="" class="example2">
+        <img src="../Asset/faq3.png" alt="" class="example2">
 
         <div class="navbar">
           <div class="navbarmain">
