--- a/html/forumpage.html
+++ b/html/forumpage.html
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <img src="/Asset/15notif.png" alt="" class="notif">
+        <img src="../Asset/15notif.png" alt="" class="notif">
         <div class="forumchoice">
           <div class="latestfriend">
               <p class="latest">Latest</p>
@@ -33,14 +33,14 @@
           </div>
         </div>
 
-        <img src="/Asset/forumexample1.png" alt="" class="example">
+        <img src="../Asset/forumexample1.png" alt="" class="example">
         <a href="forumpagereply.html">
-          <img src="/Asset/forumexample2.png" alt="" class="example">
+          <img src="../Asset/forumexample2.png" alt="" class="example">
         </a>
-        <img src="/Asset/forumexample3.png" alt="" class="example">
-        <img src="/Asset/forumexample4.png" alt="" class="example">
-        <a href="FAQ.html">
-          <img src="/Asset/FAQ.png" alt="" class="FAQ">
+        <img src="../Asset/forumexample3.png" alt="" class="example">
+        <img src="../Asset/forumexample4.png" alt="" class="example">
+        <a href="faq.html">
+          <img src="../Asset/FAQ.png" alt="" class="FAQ">
         </a>
 
         <div class="navbar">
