--- a/html/forumpage1.html
+++ b/html/forumpage1.html
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <img src="/Asset/25notif.png" alt="" class="notif1">
+        <img src="../Asset/25notif.png" alt="" class="notif1">
         <div class="forumchoice">
           <div class="latestfriend">
             <a href="forumpage.html" class="latestt">
@@ -34,12 +34,12 @@
           </div>
         </div>
 
-        <img src="/Asset/friendforum1.png" alt="" class="example1">
-        <img src="/Asset/friendforum2.png" alt="" class="example1">
-        <img src="/Asset/friendforum3.png" alt="" class="example1">
-        <img src="/Asset/friendforum4.png" alt="" class="example1">
-        <a href="FAQ.html">
-          <img src="/Asset/FAQ.png" alt="" class="FAQ1">
+        <img src="../Asset/friendforum1.png" alt="" class="example1">
+        <img src="../Asset/friendforum2.png" alt="" class="example1">
+        <img src="../Asset/friendforum3.png" alt="" class="example1">
+        <img src="../Asset/friendforum4.png" alt="" class="example1">
+        <a href="faq.html">
+          <img src="../Asset/FAQ.png" alt="" class="FAQ1">
         </a>
 
         <div class="navbar">
