--- a/html/forumpagereply.html
+++ b/html/forumpagereply.html
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <img src="/Asset/15notif.png" alt="" class="notif">
+        <img src="../Asset/15notif.png" alt="" class="notif">
         <div class="forumchoice">
           <div class="latestfriend">
             <a href="forumpage.html" class="latestt">
@@ -37,12 +37,12 @@
           </div>
         </div>
 
-        <img src="/Asset/forumexample2.png" alt="" class="example">
-        <img src="/Asset/forumreply1.png" alt="" class="example">
-        <img src="/Asset/forumreply3.png" alt="" class="example3">
-        <img src="/Asset/forumreply2.png" alt="" class="example">
-        <a href="FAQ.html">
-          <img src="/Asset/FAQ.png" alt="" class="FAQ">
+        <img src="../Asset/forumexample2.png" alt="" class="example">
+        <img src="../Asset/forumreply1.png" alt="" class="example">
+        <img src="../Asset/forumreply3.png" alt="" class="example3">
+        <img src="../Asset/forumreply2.png" alt="" class="example">
+        <a href="faq.html">
+          <img src="../Asset/FAQ.png" alt="" class="FAQ">
         </a>
 
         <div class="navbar">
