--- a/html/healthcalcu.html
+++ b/html/healthcalcu.html
@@ -24,7 +24,7 @@
                 </div>
             </nav>
            
-            <img src="/Asset/calorietracker.png " alt="" class="progressbar2">
+            <img src="../Asset/calorietracker.png " alt="" class="progressbar2">
 
             <div class="healthchoice1">
                 <div class="calculatormeal1">
@@ -44,8 +44,8 @@
             </div>
 
             <div class="healthsleep1">
-                <img src="/Asset/foodcalc1.png" alt="" class="foodcalc1">
-                <img src="/Asset/foodcalc2.png" alt="" class="foodcalc2">
+                <img src="../Asset/foodcalc1.png" alt="" class="foodcalc1">
+                <img src="../Asset/foodcalc2.png" alt="" class="foodcalc2">
             </div>
             <div class="navbar">
               <div class="navbarmain">
