--- a/html/homescreen.html
+++ b/html/homescreen.html
@@ -51,9 +51,9 @@
         <div class="hero">
           <div id="calendar"></div>
         </div>
-      <img src="/Asset/pushupexercise.png" alt="" class="imgworkout1">
-      <img src="/Asset/squatexercise.png" alt="" class="imgworkout2">
-      <img src="/Asset/situpexercise.png" alt="" class="imgworkout3">
+      <img src="../Asset/pushupexercise.png" alt="" class="imgworkout1">
+      <img src="../Asset/squatexercise.png" alt="" class="imgworkout2">
+      <img src="../Asset/situpexercise.png" alt="" class="imgworkout3">
       <div class="navbar">
         <div class="navbarmain">
 
