--- a/html/settingpage.html
+++ b/html/settingpage.html
@@ -35,12 +35,12 @@
                 <input type="text" required>
                 <label for="">Search for meals</label>
             </div>
-            <img src="/Asset/setaccount.png" alt="" class="setsetset">
-            <img src="/Asset/setnotif.png" alt="" class="setsetset">
-            <img src="/Asset/setsubscrib.png" alt="" class="setsetset">
-            <img src="/Asset/helpandsupport.png" alt="" class="setsetset">
-            <img src="/Asset/setabout.png" alt="" class="setsetset">
-            <img src="/Asset/logoutt.png" alt="" class="setsetset">
+            <img src="../Asset/setaccount.png" alt="" class="setsetset">
+            <img src="../Asset/setnotif.png" alt="" class="setsetset">
+            <img src="../Asset/setsubscrib.png" alt="" class="setsetset">
+            <img src="../Asset/helpandsupport.png" alt="" class="setsetset">
+            <img src="../Asset/setabout.png" alt="" class="setsetset">
+            <img src="../Asset/logoutt.png" alt="" class="setsetset">
             
             <div class="navbar">
               <div class="navbarmain">
