--- a/html/workout.html
+++ b/html/workout.html
@@ -35,18 +35,18 @@
         </div>
 
         <div class="workout">
-            <img src="/Asset/workoutpushup.png" alt="" class="workoutexample">
-            <img src="/Asset/workoutpilates.png" alt="" class="workoutexample">
+            <img src="../Asset/workoutpushup.png" alt="" class="workoutexample">
+            <img src="../Asset/workoutpilates.png" alt="" class="workoutexample">
             <a href="workoutyoga.html" class="oppen">
-                <img src="/Asset/workoutyoga.png" alt="" class="workoutexample">
+                <img src="../Asset/workoutyoga.png" alt="" class="workoutexample">
             </a>
         </div>
         <div class="workout12">
-            <img src="/Asset/workoutsquad.png" alt="" class="workoutexample">
-            <img src="/Asset/workoutsitup.png" alt="" class="workoutexample">
-            <img src="/Asset/workoutplank.png" alt="" class="workoutexample">
+            <img src="../Asset/workoutsquad.png" alt="" class="workoutexample">
+            <img src="../Asset/workoutsitup.png" alt="" class="workoutexample">
+            <img src="../Asset/workoutplank.png" alt="" class="workoutexample">
         </div>
-        <img src="/Asset/workoutpt.png" alt="" class="workoutexample1">
+        <img src="../Asset/workoutpt.png" alt="" class="workoutexample1">
 
         <div class="navbar">
             <div class="navbarmain">
