--- a/html/workoutyoga.html
+++ b/html/workoutyoga.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="homepage3">
             <div class="letswork3">
-                <img src="/Asset/duoqueue.png" alt="" class="duoqueue">
+                <img src="../Asset/duoqueue.png" alt="" class="duoqueue">
             </div>
         </nav>
 
@@ -48,7 +48,7 @@
             </div> 
         </div> 
 
-        <img src="/Asset/workoutyogatutor.png" alt="" class="example4">
+        <img src="../Asset/workoutyogatutor.png" alt="" class="example4">
 
         <div class="navbar">
           <div class="navbarmain">
