--- a/html/homescreen.html
+++ b/html/homescreen.html
@@ -13,9 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/calender.css">
-    <link rel="stylesheet" href="/css/evo-calendar.min.css">
-    <link rel="stylesheet" href="/css/evo-calendar.midnight-blue.min.css">
+    <link rel="stylesheet" href="../css/calender.css">
+    <link rel="stylesheet" href="../css/evo-calendar.min.css">
+    <link rel="stylesheet" href="../css/evo-calendar.midnight-blue.min.css">
   </head>
 <!-- <img src="../Asset/bg2.png" alt="" class="bgimg"> -->
 <body>
@@ -68,7 +68,7 @@
     </header>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
-    <script src="/js/evo-calendar.min.js"></script>
+    <script src="../js/evo-calendar.min.js"></script>
 
     <script>
         $(document).ready(function() {
