--- a/html/workoutyoga.html
+++ b/html/workoutyoga.html
@@ -63,6 +63,6 @@
       </div>
     </header>
 
-    <script src="Finness-SE/js/stopwatch.js"></script>
+    <script src="./js/stopwatch.js"></script>
 </body>
 </html>
