--- a/html/settingpage.html
+++ b/html/settingpage.html
@@ -33,7 +33,7 @@
             <div class="setsearch">
                 <span class="iconss"><ion-icon name="search-outline"></ion-icon></span>
                 <input type="text" required>
-                <label for="">Search for meals</label>
+                <label for="">Search for settings</label>
             </div>
             <img src="../Asset/setaccount.png" alt="" class="setsetset">
             <img src="../Asset/setnotif.png" alt="" class="setsetset">
